--- a/css/main.css
+++ b/css/main.css
@@ -13,10 +13,6 @@ body {
     margin: 0;
 }
 
-/* div {
-    display: inline-block;
-} */
-
 .spacer {
     /* width: 100%; */
     height: 25%;
@@ -25,10 +21,14 @@ body {
 .container {
     margin-left: calc((100% - 300px)/2);
     width: 300px;
-    height: 450px;
-    background-color: rgba(255, 255, 255, 0.4);
+    height: 400px;
+    background-color: rgba(255, 255, 255, 0.15);
     border-radius: 20px;
 }
+
+/* div {
+    display: inline-block;
+} */
 
 h1 {
     color: white;
@@ -53,5 +53,54 @@ input {
 .inputsContainer>input {
     display: inline-block;
     width: 90px;
-    margin: 0 0 5px 25px;
+    margin: 0 0 1px 25px;
+}
+
+/* .inputsContainer>input:nth-child(2) {
+    margin-left: 15px;
+} */
+
+#cb {
+    /* box-shadow: 1px 1px 3px black; */
+    /* border: 10px solid white; */
+    box-shadow: none;
+    /* display: inline-block; */
+    /* margin-left: 60px; */
+    /* appearance: none; */
+    background-color: white;
+    width: 15px;
+    height: 15px;
+    /* padding-top: 10px; */
+    margin: auto;
+}
+
+#cbContainer {
+    padding-top: 10px;
+    display: inline-block;
+    margin-left: 61px;
+}
+
+#textsContainer {
+    display: inline-block;
+}
+
+a {
+    color: aqua;
+    text-decoration: none;
+}
+
+button {
+    background-color: aqua;
+    margin-left: 40px;
+    margin-top: 15px;
+    padding: 10px 50px;
+    border-radius: 20px;
+    border: none;
+    color: white;
+    font-weight: 750;
+    box-shadow: 0px 2px 0px 2px rgb(33, 145, 145), 1px 3px 2px 2px rgb(47, 72, 105);
+}
+
+label {
+    color: white;
 }
