--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ body {
 .container {
     margin-left: calc((100% - 300px)/2);
     width: 300px;
-    height: 400px;
+    height: 350px;
     background-color: rgba(255, 255, 255, 0.15);
     border-radius: 20px;
 }
@@ -35,6 +35,7 @@ h1 {
     text-align: center;
     padding: 20px 0;
     font-size: 25px;
+    margin-bottom: 0px;
 }
 
 input {
@@ -85,20 +86,31 @@ input {
 }
 
 a {
-    color: aqua;
+    color: rgb(1, 235, 251);
     text-decoration: none;
 }
 
 button {
-    background-color: aqua;
+    background-color: rgb(1, 235, 251);
     margin-left: 40px;
     margin-top: 15px;
-    padding: 10px 50px;
+    padding: 10px 55px;
     border-radius: 20px;
     border: none;
     color: white;
     font-weight: 750;
     box-shadow: 0px 2px 0px 2px rgb(33, 145, 145), 1px 3px 2px 2px rgb(47, 72, 105);
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: rgb(12, 170, 182);
+}
+
+button:active {
+    background-color: #3e8e41;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
 }
 
 label {
